# mangOH

./: .drone.yml  .gitignore  .gitmodules  .uncrustify.legato.cfg  Dockerfile  Makefile  README.md  default.sdef  env_test_yellow.sdef  green.sdef  mangOH.sdef  mangOH_Green.sdef  mangOH_Red.sdef  mangOH_Red_9x07.sdef  mangoh.sdef  red.sdef  setup.sh  shared.sdef  targetDefs.extra  targetDefs.mangoh  wifi.sdef  yellow.sdef
.github/workflows/: build.yaml
apps/Bme680EnvironmentalSensor/: README.md  bme680EnvironmentalSensor.adef  environment.adef  mangOH_bme680.api
apps/DataPushTest/: dataPushTest.adef
apps/GroveSensor/: README.md  groveSensor.adef
apps/LedService/: ledService.adef  ma_led.api
apps/Mcp9700aTemperatureSensor/: mangOH_ambientTemperature.api  mcp9700aTemperatureSensor.adef
apps/NtagDhubIf/: NtagDhubIf.adef  NtagDhubIf.wp76xx.update  errs
apps/OpenWeatherMapAmbientTemperature/: openWeatherMapAmbientTemperature.adef
apps/Welcome/: helloYellow.adef
apps/YellowOnBoardActuators/: actuator.adef  leds.adef
components/bluezDBus/: CMakeLists.txt  Component.cdef  Makefile  README.md  org.bluez.Adapter1.xml  org.bluez.Device1.xml  org.bluez.GattCharacteristic1.xml  org.bluez.GattDescriptor1.xml  org.bluez.GattService1.xml  org.bluez.LEAdvertisement1.xml  org.bluez.LEAdvertisingManager1.xml
scripts/: cfg_gateway.sh
sinc/: can_iot_card.sinc  mangoh_green_can_iot_card.sinc  mangoh_red_can_iot_card.sinc  octave_full.sinc  octave_minimal.sinc
targets/: mdm9x07.sinc  mdm9x15.sinc  wp77xx.sinc  wp85.sinc
tools/: eeprom_bin_from_yaml.py
(+610 files in other folders)
